--- a/data_analysis_project/data_analysis_project.Rmd
+++ b/data_analysis_project/data_analysis_project.Rmd
@@ -32,8 +32,9 @@ glimpse(spotify_youtube)
 ```
 
 ### Basic exploratory analysis
-** The dataset has 20,718 rows and 28 columns. There are some NA values within the YouTube data which could serve as a limitation. Similarly, within the YouTube description values, some of the descriptions have emojis or other characters and symbols that could be difficult to work with. Another limitation could arise with the values in the instrumentalness column since they include negative exponents which could also be difficult to work with for different analysis calculations. The original source of the data defines the columns well, otherwise we may make them more complicated. Since the data includes artists whose music is on Spotify but probably not every artist in the world, we would not be able to make assumptions about the music industry as a whole. Another limitation we can notice is that some of the songs that fall under an artist's most popular songs are feautres of said artist on another song. This can be kind of confusing, but we might be able to work around it using filters once we start more analysis. However, this data is also helpful for answering our question about how collaborations affect an artist's popularity. One code we would need to make note of is 'key,' which denotes pitch notation but we need to find a way to make it easily apparent what the pitch is rather than just seeing a number. 
+** The dataset has 20,718 rows and 28 columns. There are some NA values within the YouTube data which could serve as a limitation. Similarly, within the YouTube description values, some of the descriptions have emojis or other characters and symbols that could be difficult to work with. Another limitation could arise with the values in the instrumentalness column since they include negative exponents which could also be difficult to work with for different analysis calculations. The original source of the data defines the columns well, otherwise we may make them more complicated. Since the data includes artists whose music is on Spotify but probably not every artist in the world, we would not be able to make assumptions about the music industry as a whole. Another limitation we can notice is that some of the songs that fall under an artist's most popular songs are feautres of said artist on another song. This can be kind of confusing, but we might be able to work around it using filters once we start more analysis. However, this data is also helpful for answering our question about how collaborations affect an artist's popularity. One code we would need to make note of is 'key,' which denotes pitch notation but we need to find a way to make it easily apparent what the pitch is rather than just seeing a number. There could also be issues with repeat songs when songs are on more than one album, although sometimes it will be the same song but a slightly different rendition.
 
+##Questions
 Question 1: Which attributes, such as danceability, energy, loudness, etc., tend to have a correlation with the most streamed songs?
 
 Analysis: After using code to select the variables we wanted to work with, we found the correlation coefficient for each song attribute in relation to the number of streams for each song. After finding the correlation coefficients, we calculated the mean among the coefficients for each attribute to average it out. After that, we looked for the maximum value among all the means, and found that danceability and streams had the highest positive correlation coefficient of about 0.073. There were some previous errors due to some values being NA, but using the filter for complete cases got rid of them, and the data we did use was so large that it provided a general idea of which attribute had the greatest correlation to number of streams.
@@ -98,5 +99,44 @@ streams_views %>%
   )
 ```
 
+Question 3: How many videos with a high number of streams are coming from licensed content?
 
+Analysis: 
+
+```{r}
+youtube_high_views <- spotify_youtube %>%
+  filter(views > 500000000)
+
+youtube_high_views %>%
+  group_by(artist) %>%
+  summarise (
+    count_licensed = n()
+  ) %>%
+  arrange(desc(count_licensed))
+
+youtube_high_views %>%
+  filter(licensed == FALSE) 
+
+youtube_high_views %>%
+  group_by(channel) %>%
+  filter(licensed == FALSE, official_video == TRUE)
+
+##how to get totals for licensed and unlicensed?
+```
+
+Question 4: How do collaborations or features on a song affect its popularity on Spotify and Youtube? What are the most popular collaborations?
+
+Analysis:
+
+```{r}
+song_features <- spotify_youtube %>%
+  filter(str_detect(track, 'feat.'))
+
+song_features %>%
+  group_by(artist, stream) %>%
+  arrange(desc(stream))
+
+##How to count how many features an artist has, issue of repeats where the same song is listed under more than one artist (Mackelmore and Ryan Lewis)
+
+```
 
