--- a/labs/lab_12/lab_12.rmd
+++ b/labs/lab_12/lab_12.rmd
@@ -29,7 +29,7 @@ library(rvest)
 
 **Q1.** You've been assigned to report a story about the leading reasons that Maryland attorneys get sanctioned by the state for misconduct. The state [publishes lists of sanctions](https://www.courts.state.md.us/attygrievance/sanctions) that contain a short text description about the situation. Load the CSV file in the data folder containing records from fiscal year 2011 onwards. Make a list of unique words from the text column, then following the example in the pre_lab, remove common "stop words" from that list and create a list of the top 10 words containing the percentage of occurrences each word represents. What's the leading word in that answer and, broadly, what do you think the top 10 words describe?
 
-**A1. From my analysis, trust was the leading word in the top 10. Although my results could be skewed if I did not use the proper stop words. Trust could also have a number of meanings, whether it is breaking the trust of a client and other officials or a trust involving money and other legal obligations. I think the top 10 words that my code returned mostly describe the punishments attorneys have received for their wrongdoings, such as reprimands, suspension and  disbarrment. Some of the rest of the words allude to the possible violations committed and who experienced or reviewed them. I inlcuded failing and failed in my stop words because if a lawyer is being sanctioned that means that they have had to fail in some way. So I was thinking that by removing failed and failing I would be able to get closer to the roots of the actual wrongdoings to see which offenses are more common.** 
+**A1. From my analysis, trust was the leading word in the top 10. Although my results could be skewed if I did not use the proper stop words. Trust could also have a number of meanings, whether it is breaking the trust of a client and other officials or a trust involving money and other legal obligations. I think the top 10 words that my code returned mostly describe the punishments attorneys have received for their wrongdoings, such as reprimands, suspension and  disbarrment. Some of the rest of the words allude to the possible violations committed and who experienced or reviewed them. I included failing and failed in my stop words because if a lawyer is being sanctioned that means that they have had to fail in some way. So I was thinking that by removing failed and failing I would be able to get closer to the roots of the actual wrongdoings to see which offenses are more common.** 
 
 ```{r}
 sanctions <- read_csv("data/md_attorney_sanctions.csv")
