--- a/data_analysis_project/data_analysis_project.Rmd
+++ b/data_analysis_project/data_analysis_project.Rmd
@@ -122,16 +122,32 @@ youtube_high_views %>%
 youtube_high_views %>%
   filter(licensed == FALSE) 
 ##finding the amount of views for videos that are licensed and unlicensed and grouping it by channel
-youtube_high_views %>%
+high_views_licensing <- youtube_high_views %>%
   group_by(channel, licensed) %>%
   summarize(total_views = sum(views)) %>% 
   pivot_wider(names_from = licensed, values_from = total_views)
+
 ##finding the number of views for videos that are unlicensed but it is the official video and grouping it by channel 
 youtube_high_views %>%
   group_by(channel, official_video) %>%
   summarize(total_views = sum(views)) %>% 
   pivot_wider(names_from = official_video, values_from = total_views) %>% 
   filter(`FALSE` > 0)
+```
+```{r}
+##visualize views from licensed vs. unlicensed videos
+ high_views_licensing %>%
+  filter(!is.na(`TRUE`)) 
+
+high_views_licensing %>%
+  filter(!is.na(`FALSE`))
+  
+high_views_licensing_totals <- high_views_licensing %>%
+  mutate(total_licensed = 320, total_unlicensed = 30)
+    
+    
+  ggplot() +
+  geom_bar(aes(x=County, weight=TOTAL_DIFF))
 ```
 
 **Question 4: How do collaborations or features on a song affect its popularity on Spotify and YouTube? What are the most popular collaborations?**
